assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Nunito', sans-serif;
}

h1 {
    font-family: 'Nunito', sans-serif;
    font-weight: 600;
    font-size: 170%;
    color: #fff6f9;
}

/* Header */

header {
    background-color: #494244;
    padding: 1rem 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #494244;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

/* Burger toggle */
.fa-bars {
    color: #fff6f9;
}


header a {
    text-decoration: none;
    color: inherit;
}

#menu {
    list-style-type: none;
    margin-top: 8px;
}

#menu > li {
    margin-bottom: 1em;
    color: #fff9f9;
}

.active {
    border-bottom: 1px solid #fff6f9;
}

/* Navbar styles with dropdown toggle */
/* Credit: Love Running Walkthrough Project */
nav {
    position: absolute;
    background-color: #494244;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #494244;
    display: none;
    top: 100%;
}
/* Nav toggle */
/* Credit: Love Running Walkthrough Project */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

#nav-toggle-label {
    font-size: 2rem;
}

/* Main content */

main {
    background-color: #fff6f9;
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 69px;
    /* Enable flex properties for child elements */
    display: flex;
    flex-direction: column;
 }

/* Hero section */
#hero {
    height: 100vh;
    width: 100%;
    background: url("/assets/images/hero-background.jpg") no-repeat right center / cover;
    position: relative;
}

#cover-text {
    font-size: 140%;
    color: #f21860;
    position: absolute;
    top: 150px;
    padding-left: 15px;
}

#cover-text > h2 {
    font-size: 170%;
}

/* About page */
#about-heading {
    margin: 20px;
    color: #f21860;
}

#about-text > div {
    margin: 20px;
    color: #494244;
}

#about-image > img {
    background: url(assets/images/profile.jpeg) no-repeat top center / cover;
    height: 60vw;
    width: 60vw;
    margin: 20px;
    /* Makes the square into a circle */
    border-radius: 50%;
    max-width: 200px;
    max-height: 200px;
}

/* Contact page */

#contact-form {
    margin: 20px;  
}

#contact-form > h2 {
    /* margin: 20px; */
    padding-bottom: 20px;
    color: #f21860;
}

#contact-links {
    color: #494244;
    padding: 10px 0;
}

#contact-links > a {
    display: block;
    text-decoration: none;
    color: #f21860;
}

#message-heading {
    padding: 15px 0;
}

#contact-form > label {
    color: #494244;
}

/* #contact-form > button {
    color: #494244;
} */

.text-input {
    color: #494244;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #fbb1ca;
    border-radius: 2px;
    padding: 0 5px;
}

#message {
    height: 100px;
}


/* Footer */
footer {
    background-color: #494244;
    position: fixed;
    width: 100%;
    bottom: 0;
    z-index: 99;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 150%;
    padding: 5%;
    color: #fff6f9;
}

/* Media query: large or landscape phones (576px and up) */

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width:768px) {
    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem; 
        /* background-color: #494244; */
    }

    #menu {
        display: flex;
    }

    #menu > li {
        padding-left: 1.5rem;
    }

    .nav-toggle-label {
        display: none;
    }
    #name {
        font-size: 300%;
        line-height: 80px;
        margin: 0.05 0.5rem;
    }

    /* Main content */
    main {
         /* Push main content down to accomodate larger header */
        margin-top: 112px;
    }

    /* Hero section */
    #cover-text {
        font-size: 300%;
        padding-top: 5vh;
        padding-left: 50px;
    }
}

/* Media query: laptops and larger (992px and up) */
@media screen and (min-width:992px) {
    #menu a:hover {
    border-bottom: 1px solid #fff6f9
    }
}
/* Media query: large screens (1200px and up) */

